# cuda-examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
coalescing/: CMakeLists.txt  main.cu
include/: common.h
matrixmult/: CMakeLists.txt  main.cu
memtransfer/: CMakeLists.txt  main.cu
saxpy/: CMakeLists.txt  main.cu
scripts/: coalescing.py
stencil/: CMakeLists.txt  main.cu
